--- a/css/style.css
+++ b/css/style.css
@@ -17,18 +17,20 @@ html, body {
 }
 
 body {
-    margin:0px;
-    background-color: #fff;
+    margin: 0px;
+    background-color: #FFDC00;
     padding: 0px;
+    height: auto;
+    text-align: center;
 }
     
 h1, h2, h3, h4, p, a, figcaption, input, textarea, button, span, .success  {
-    color: #57634e;
+    color: #000000;
     font-weight: 400;
     font-style: normal;
-    font-family: 'PT Serif', serif;  
-    font-size: 17px;
-    line-height: 1.4;
+    font-family: Arial, Helvetica, sans-serif;  
+    font-size: 20px;
+    line-height: 1.3;
     text-align: left;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -36,13 +38,13 @@ h1, h2, h3, h4, p, a, figcaption, input, textarea, button, span, .success  {
     hyphens: auto;
     -webkit-hyphens: auto;
     text-decoration: none;
-    letter-spacing: 0.75px;
 }
 
-h1 {
+h1, figcaption span {
     font-size: 32px;
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 
 h2 {
@@ -50,332 +52,212 @@ h2 {
     margin-top: 40px;
     margin-bottom: 40px;
     line-height: 1.5;
-    letter-spacing: 0.75px;
-}
-
-figure {
-    margin-bottom: 80px;
 }
 
 figcaption {
-    font-size: 14px;
-    padding: 15px 20px;
+    padding: 15px 0px;
 }
 
-p, a{
-    font-size: 17px;
-    line-height: 1.75;
-}
 
    
 /*---------------------------------- 
     header nav
 -----------------------------------*/
 
-.cd-auto-hide-header {
-    position: fixed;
-    z-index: 100;
-    top: -100px;
-    left: 0;
-    width: auto;
-    height: 100px;
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-    will-change: transform;
-    -webkit-transition: -webkit-transform .5s;
-    transition: -webkit-transform .5s;
-    transition: transform .5s;
-    transition: transform .5s, -webkit-transform .5s;
-}
-
-#notscroll {transform: none;}
-.cd-auto-hide-header::after {
-    clear: both;
-    content: "";
-    display: block;
-}
-.cd-auto-hide-header.is-hidden {
-    -webkit-transform: translateY(-100%);
-        -ms-transform: translateY(-100%);
-            transform: translateY(-100%);
-}
-
-@media only screen and (min-width: 1220px) {
-  .cd-auto-hide-header {
-      height: 100px;
-          width: 50%;
-  }
-}
-
-.cd-auto-hide-header .logo,
-.cd-auto-hide-header .nav-trigger {
+/*---------------------------------- 
+main-nav
+-----------------------------------*/
+#navcontainer {
+    width: 70%;
+    margin: 0 15%;
     position: relative;
+}
+
+.navcovid {
+    position: relative;
+    width: 80%;
     float: left;
 }
 
-.cd-auto-hide-header .logo {
-    background-color: #718166;
-    padding: 24px 26px;
-}
 
-.cd-auto-hide-header .logo a, 
-.cd-auto-hide-header .logo img {
-  display: block;
-}
+/*---------------------------------- 
+nav
+-----------------------------------*/
 
-.cd-auto-hide-header .nav-trigger {
-    display: table;
-    height: 100%;
-    padding: 0 1em;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    color: #718166;
-    font-weight: bold;
-    right: 0;
-    outline: 0;
-}
-.cd-auto-hide-header .nav-trigger span {
-    display: table-cell;
-    vertical-align: middle;
-}
-.cd-auto-hide-header .nav-trigger em, 
-.cd-auto-hide-header .nav-trigger em::after, 
-.cd-auto-hide-header .nav-trigger em::before {
-    display: block;
+#navburger {
+    float: right;
+    width: 25px;
+    height: 17px;
+    margin-top: 50px;
     position: relative;
-    height: 2px;
-    width: 22px;
-    background-color: #718166;
-    -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
+    cursor: pointer;
+    z-index: 11;
+    -webkit-transition: ease 1s;
+    -moz-transition: ease 1s;
+    -o-transition: ease 1s;
+    transition: ease 1s;
 }
 
-.cd-auto-hide-header .nav-trigger em::before, 
-.cd-auto-hide-header .nav-trigger em::after {
-  position: absolute;
-  content: '';
-  left: 0;
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
-}
-.cd-auto-hide-header .nav-trigger em::before {
-  -webkit-transform: translateY(-6px);
-      -ms-transform: translateY(-6px);
-          transform: translateY(-6px);
-}
-.cd-auto-hide-header .nav-trigger em::after {
-  -webkit-transform: translateY(6px);
-      -ms-transform: translateY(6px);
-          transform: translateY(6px);
-}
-
-@media only screen and (min-width: 1220px) {
-  .cd-auto-hide-header .nav-trigger {
-    display: none;
-  }
-}
-
-.cd-auto-hide-header.nav-open .nav-trigger em {
-  background-color: rgba(255, 255, 255, 0);
-}
-.cd-auto-hide-header.nav-open .nav-trigger em::before {
-  -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-}
-.cd-auto-hide-header.nav-open .nav-trigger em::after {
-  -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
-.cd-primary-nav {
-    display: inline-block;
-    float: left;
-    height: 100%;
-    padding-left: 34px;
-    background-color: #fff;
-    padding-right: 34px;
-}
-.cd-primary-nav > ul {
+#navburger span {
     position: absolute;
-    z-index: 2;
-    top: 100px;
-    margin: 0;
-    left: 0;
-    padding: 0;
+    height: 2px;
     width: 100%;
-    background-color: #ffffff;
+    background: #005A32;
+    border-radius: 10px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+}
+
+#navburger span:nth-child(1) {
+    top: 0px;
+}
+
+#navburger span:nth-child(2),#navburger span:nth-child(3) {
+    top: 7px;
+}
+
+#navburger span:nth-child(4) {
+    top: 14px;
+}
+
+#navburger.open span:nth-child(1) {
+    top: 7px;
+    width: 0%;
+    left: 50%;
+}
+
+#navburger.open span:nth-child(2) {
+  transform: rotate(45deg);
+}
+
+#navburger.open span:nth-child(3) {
+  transform: rotate(-45deg);
+}
+
+#navburger.open span:nth-child(4) {
+    top: 8px;
+    width: 0%;
+    left: 50%;
+}
+
+.nav {
+    background-color: #EBF5FB;
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    z-index: 10;
     display: none;
 }
 
-.cd-primary-nav > ul a {
-    display: block;
-    height: 50px;
-    line-height: 50px;
-    padding-left: 5%;
-    color: #718166;
-    font-size: 17px;
-    border-top: 1px solid #f2f2f2;
-}
-.cd-primary-nav > ul a:hover, .cd-primary-nav > ul a.active {
-    color: #434d3c;
-}
 
-@media only screen and (min-width: 1220px) {
-  .cd-primary-nav {
-    display: table;
-  }
-  .cd-primary-nav > ul {
-    display: table-cell;
-    vertical-align: middle;
-    position: relative;
-    width: auto;
-    top: 0;
+.nav ul {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    text-align: center;
     padding: 0;
-    background-color: transparent;
-    box-shadow: none;
-  }
-  .cd-primary-nav > ul::after {
-    clear: both;
-    content: "";
-    display: block;
-  }
-  .cd-primary-nav > ul li {
-    display: inline-block;
-    float: left;
-    margin-right: 1.2em;
-  }
-  .cd-primary-nav > ul li:last-of-type {
-    margin-right: 0;
-  }
-  .cd-primary-nav > ul a {
-    /* reset mobile style */
-    height: auto;
-    line-height: normal;
-    padding: 0;
-    border: none;
-  }
+    -webkit-transition: 1.25s ease-in-out;
+    transition: 1.25s ease-in-out;
+    top: 10%;
 }
 
-.nav-open .cd-primary-nav ul,
-.cd-primary-nav ul:target {
-  /* 
-  	show primary nav - mobile only 
-  	:target is used to show navigation on no-js devices
-  */
-  display: block;
-}
-@media only screen and (min-width: 1220px) {
-  .nav-open .cd-primary-nav ul,
-  .cd-primary-nav ul:target {
-    display: table-cell;
-  }
+.nav ul.up {
+    top: 30%;
 }
 
-.respbaumgarten {
-    float: left;
-    padding: 19px 20px;
-    display: none;
+.nav li {
+    list-style-type: none;
+    -webkit-transition: 1.25s ease-in-out;
+    transition: 1.25s ease-in-out;
 }
 
-.respbaumgarten a {
-    font-size: 20px;
+.nav a {
+    -webkit-transition: 0.25s ease-in-out;
+    transition: 0.25s ease-in-out;
+    text-align: center;
+    padding: 0px;
+    font-size: 36px;
+}
+
+.nav li.open {
+    padding: 14px;
+}
+
+.nav a:hover {
+    font-size: 46px;
 }
 
 /*---------------------------------- 
     start
 -----------------------------------*/
 
+section {
+    width: 70%;
+    margin: 0 15%;
+    position: relative;
+    display: inline-block;    
+}
 
+.h1red {
+    font-family: "Arial Black";
+    font-weight: 900;
+    font-size: 75px;
+    width: 70%;
+    padding: 26px 15%;
+    margin: 0;
+    position: relative;
+    background-color: #EB0029;
+    color: #fff;
+    display: inline-block;
+    text-transform: uppercase;
+}
+
+.threeicon {
+    width: 26%;
+    float: left;
+    margin-right: 11%;
+    margin-top: 40px;
+}
+
+.threeicon.r {
+    margin-right: 0;
+}
 
 /*---------------------------------- 
     footer
 -----------------------------------*/
 
 footer {
-    margin: 0;
     position: relative;
     display: inline-block;
-    background-color: #718166;
-    width: 100%;
+    background-color: #fff;
+    width: 70%;
+    padding: 0 15%;
     float: left;
-    z-index: 1
-}
-
-.footer {
-    display: inline-block;
-    width: 100%;
 }
 
 .footerkontakt {
     float: left;
-    
-}
-
-.footerkontakt p {
-    color: #fff;
-    margin: 40px;
-}
-
-.footerkontakt a,
-#impressum p{
-    color: #fff;
-}
-
-.footernav {
-    float: right;
-    margin: 40px 80px 40px 40px;
-}
-
-.footernav ul {
-    margin: 0;
-    display: inline-block;
-    padding: 0;
-}
-
-footer a{
-    color: #fff;
-    margin: 0;
-}
-
-.impressum {
-    color: #fff;
-    margin: 0;
-    cursor: pointer;
-}
-
-#impressum {
-    display: none;
-    padding: 40px 40px;
-    position: relative;
-    float: left;
 }
 
 .disclamer {
-    font-size: 14px;
-    color: #fff;
+    cursor: pointer;
 }
 
-.konditionen {
-    font-size: 14px;
-    color: #718166;
-}
-
-#datenschutz,
-#konditionen {
+#datenschutz {
     display: none;
-    padding: 0px 40px 40px;
+    padding: 0px 0px 40px 0px;
     position: relative;
     float: left;
 }
-
-#datenschutz p{
-    font-size: 14px;
-    color: #fff;
-}
-
 
 #optoutbanner99 {
 	font-size: 12px;
