--- a/css/style.css
+++ b/css/style.css
@@ -261,14 +261,13 @@ footer {
 
 #optoutbanner99 {
 	font-size: 12px;
-	line-height: 18px;
+    line-height: 18px;
     position: fixed;
     bottom: 0;
     left: 0;
-	background-color: #f2f2f2;
-	padding: 20px;
-	text-align: right;
-	z-index: 200;
+    background-color: #fff;
+    text-align: right;
+    z-index: 200;
 }
 
 #optoutbanner99 a,
@@ -276,18 +275,15 @@ footer {
 	cursor: pointer;
     font-size: 15px;
     display: inline-block;
-    margin: 0px 3px;
+    margin-left: 20px;
 }
 
 #acceptga {
 	text-decoration: none !important;
-	background-color: #718166;
+	background-color: #EB0029;
 	color: #fff !important;
 	font-weight: normal !important;
-    padding: 0px 5px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+    padding: 20px;
 }
 
 /*---------------------------------- 
