--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,17 @@ background-repeat:no-repeat;
 padding-left: 1.5em;
 }
 
+button {
+    background-color: #00a700;
+    padding: 20px 38px;
+    color: #fff;
+    border-radius: 55px;
+    border: none;
+    font-weight: bold;
+    margin: 30px 0px 50px;
+}
+
+
 
    
 /*---------------------------------- 
