--- a/css/style.css
+++ b/css/style.css
@@ -40,22 +40,28 @@ h1, h2, h3, h4, p, a, li, input, textarea, button, span, .success  {
 }
 
 h1, figcaption span {
-    font-size: 32px;
-    margin-top: 40px;
-    margin-bottom: 20px;
+    font-size: 42px;
+    margin-top: 50px;
+    margin-bottom: 10px;
     font-weight: bold;
+    padding: 0 10px;
 }
 
 h2 {
     padding: 0 10px;
     font-size: 32px;
-    margin-bottom: 30px;
-    font-weight: bold;
+    margin-bottom: 20px;
+    letter-spacing: 0.75px;
+    margin-top: 0;
 }
 
 h3 {
     padding: 12px 0;
     margin: 0;
+}
+
+p {
+    padding: 0 10px 20px;
 }
 
 ul {
@@ -72,6 +78,10 @@ li {
 
 li.title {
     font-weight: bold; 
+}
+
+li span {
+    float: right;
 }
 
 .minus:before { 
@@ -93,11 +103,14 @@ padding-left: 1.5em;
 button {
     background-color: #00a700;
     padding: 20px 38px;
-    color: #fff;
     border-radius: 55px;
     border: none;
-    font-weight: bold;
     margin: 30px 0px 50px;
+}
+
+button a {
+    color: #fff; 
+    font-weight: bold;
 }
 
 
@@ -202,8 +215,8 @@ nav
     position: absolute;
     z-index: 10;
     display: none;
+    left: 0;
 }
-
 
 .nav ul {
     position: absolute;
@@ -267,6 +280,7 @@ section {
     width: 70%;
     padding: 26px 15%;
     margin: 0;
+    margin-top: 50px;
     position: relative;
     background-color: #EB0029;
     color: #fff;
@@ -287,11 +301,16 @@ section {
     width: 45%;
     float: left;
     margin-right: 10%;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .twoicon.r {
     margin-right: 0;
+}
+
+.fouricon {
+    width: 25%;
+    float: left;
 }
 
 .productb {
@@ -299,6 +318,12 @@ section {
     background-color: #00a700;
     color: #fff;
     margin: 0;
+    margin-bottom: 30px;
+}
+
+.imgcontainer {
+    margin-bottom: 70px;
+    display: inline-block;
 }
 
 
@@ -316,11 +341,16 @@ footer {
 }
 
 .footerkontakt {
-    float: left;
+    margin-top: 50px;
 }
 
 .disclamer {
     cursor: pointer;
+    font-size: 14px;
+}
+
+#datenschutz p {
+    font-size: 14px;
 }
 
 #datenschutz {
