--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,16 @@ li {
 li.title {
     font-weight: bold; 
 }
+li.menge, li.menge span, .preiszusatz  {
+    font-size: 16px; 
+}
 
 li span {
     float: right;
+}
+
+h1.mask {
+    margin-top: 10px;
 }
 
 .minus:before { 
@@ -209,7 +216,7 @@ nav
 }
 
 .nav {
-    background-color: #EBF5FB;
+    background-color: #ffdc00;
     height: 100vh;
     width: 100%;
     position: absolute;
@@ -237,6 +244,9 @@ nav
     list-style-type: none;
     -webkit-transition: 1.25s ease-in-out;
     transition: 1.25s ease-in-out;
+    text-align: center;
+    font-weight: bold;
+    border: none;
 }
 
 .nav a {
@@ -244,7 +254,7 @@ nav
     transition: 0.25s ease-in-out;
     text-align: center;
     padding: 0px;
-    font-size: 36px;
+    font-size: 42px;
 }
 
 .nav li.open {
@@ -264,6 +274,11 @@ section {
     margin: 0 15%;
     position: relative;
     display: inline-block;    
+}
+
+.maskencontainer {
+    margin-bottom: 100px;
+    display: inline-block;
 }
 
 .h1top {
