--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, p, a, li, input, textarea, button, span, .success  {
     font-style: normal;
     font-family: Arial, Helvetica, sans-serif;  
     font-size: 20px;
-    line-height: 1.3;
+    line-height: 1.1;
     text-align: left;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -62,6 +62,7 @@ h3 {
 
 p {
     padding: 0 10px 20px;
+    line-height: 1.3;
 }
 
 ul {
@@ -113,19 +114,15 @@ button {
     border-radius: 55px;
     border: none;
     margin: 30px 0px 50px;
+    cursor: pointer;
 }
 
 button a {
     color: #fff; 
     font-weight: bold;
+    cursor: pointer;
 }
 
-
-
-   
-/*---------------------------------- 
-    header nav
------------------------------------*/
 
 /*---------------------------------- 
 main-nav
@@ -147,7 +144,7 @@ main-nav
 }
 
 .h3nav {
-        display: inline-block;
+    display: inline-block;
 }
 
 
@@ -255,6 +252,7 @@ nav
     text-align: center;
     padding: 0px;
     font-size: 42px;
+    font-weight: bold;
 }
 
 .nav li.open {
@@ -295,7 +293,7 @@ section {
     width: 70%;
     padding: 26px 15%;
     margin: 0;
-    margin-top: 50px;
+    margin-top: 45px;
     position: relative;
     background-color: #EB0029;
     color: #fff;
@@ -340,7 +338,6 @@ section {
     margin-bottom: 70px;
     display: inline-block;
 }
-
 
 /*---------------------------------- 
     footer
@@ -406,22 +403,35 @@ footer {
 responsive ipad
 -----------------------------------*/
 
-@media only screen and (max-width: 1400px) {
-  
-}
-
 @media only screen and (max-width: 1270px) {
-
+    .h1red {font-size: 65px; width: 90%; padding: 26px 5%;}
+    h1 {font-size: 34px;}
+    h2 {font-size: 26px;}
+    p, p a, li {font-size: 18px;}
+    section {width: 90%; margin: 0 5%;}
+    #navcontainer, footer {width: 90%; padding: 0 5%;} 
 }
     
-@media only screen and (max-width: 1130px) {
-  
+@media only screen and (max-width: 860px) {
+    .h1red {font-size: 50px; width: 90%; padding: 26px 5%;}
+    h1, .nav a {font-size: 25px;}
+    h2 {font-size: 20px;}
+    p, p a, li, li span, h3, h3 a {font-size: 16px; line-height: 1.4;}
+    .twoicon {margin-right: 4%; width: 48%}
+    .productb {padding: 20px 20px;}
+    .fouricon {width: 50%;}
 }
 
-@media only screen and (max-width: 770px) {
- 
+
+@media only screen and (max-width: 740px) {
+    .twoicon {margin-right: 0; width: 100%}
 }
 
-@media only screen and (max-width: 768px) {
-
+@media only screen and (max-width: 510px) {
+    .h1red {font-size: 31px; padding: 26px 5%;margin-top: 65px;}
+    .h3nav {width: 80%;}
+    h1 {margin-top: 30px;}
+    .productb {margin-bottom: 0px;}
+    .fouricon {width: 100%;}
+    
 }
