--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,16 @@ h1, h2, h3, h4, p, a, li, input, textarea, button, span, .success  {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    hyphens: auto;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: normal;
+    word-break: normal;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
     -webkit-hyphens: auto;
+    hyphens: auto;
+
     text-decoration: none;
 }
 
