--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,9 @@ content:'';
 background-image:url(../img/minus.svg); 
 background-size:contain; 
 background-repeat:no-repeat; 
+    display: inline-block;
+    width: 10px; 
+    height: 20px;
 padding-left: 1.5em;
 }
 
