--- a/css/style.css
+++ b/css/style.css
@@ -113,14 +113,21 @@ h1.mask {
     width: 10px; 
     height: 20px;
     padding-left: 1.5em;
+    padding-right: 12px;
+    vertical-align: middle;
 }
 
 .plus:before { 
-content:''; 
-background-image:url(../img/plus.svg); 
-background-size:contain; 
-background-repeat:no-repeat; 
-padding-left: 1.5em;
+    content:''; 
+    background-image:url(../img/plus.svg); 
+    background-size:contain; 
+    background-repeat:no-repeat; 
+    display: inline;
+    width: 10px; 
+    height: 20px;
+    padding-left: 1.5em;
+    padding-right: 12px;
+    vertical-align: middle;
 }
 
 button {
