--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,10 @@ h1, h2, h3, h4, p, a, li, input, textarea, button, span, .success  {
     overflow-wrap: break-word;
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
+    -ms-hyphens: auto;
     hyphens: auto;
+    hyphenate-limit-chars: auto 5;
+    hyphenate-limit-lines: 2;
     text-decoration: none;
 }
 
