--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,13 @@ h1, h2, h3, h4, p, a, li, input, textarea, button, span, .success  {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     
+    -ms-word-break: break-all;
+     word-break: break-all;
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto;
+    
     text-decoration: none;
 }
 
