--- a/css/style.css
+++ b/css/style.css
@@ -127,19 +127,15 @@ h1.mask {
     vertical-align: middle;
 }
 
-button {
+.button {
     background-color: #00a700;
     padding: 20px 38px;
     border-radius: 55px;
     border: none;
     margin: 30px 0px 50px;
     cursor: pointer;
-}
-
-button a {
     color: #fff; 
     font-weight: bold;
-    cursor: pointer;
 }
 
 
@@ -334,6 +330,7 @@ section {
     float: left;
     margin-right: 10%;
     margin-top: 20px;
+    display: inline-block;
 }
 
 .twoicon.r {
