--- a/css/style.css
+++ b/css/style.css
@@ -134,10 +134,13 @@ h1.mask {
     border: none;
     margin: 30px 0px 50px;
     cursor: pointer;
+    
+}
+
+.button a {
     color: #fff; 
     font-weight: bold;
 }
-
 
 /*---------------------------------- 
 main-nav
