--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ h1, h2, h3, h4, p, a, li, input, textarea, button, span, .success  {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     
-    -ms-word-break: normal;
-     word-break: normal;
+    -ms-word-break: break-word;
+     word-break: break-word;
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
