--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,10 @@ section {
     display: inline-block;
 }
 
+.newscontainer {
+    margin: 40px 0px;
+}
+
 /*---------------------------------- 
     footer
 -----------------------------------*/
