--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,8 @@ h1.mask {
     display: inline-block;
     width: 10px; 
     height: 20px;
-    padding-left: 1.3em;
+    padding-left: 20px;
+    margin: 4px 0 7px 0;
     vertical-align: middle;
 }
 
@@ -123,7 +124,8 @@ h1.mask {
     display: inline-block;
     width: 10px; 
     height: 20px;
-    padding-left: 1.3em;
+    padding-left: 20px;
+    margin: 4px 0 7px 0;
     vertical-align: middle;
 }
 
@@ -147,8 +149,8 @@ h1.mask {
 main-nav
 -----------------------------------*/
 #navcontainer {
-    width: 70%;
-    padding: 0px 15%;
+    width: 90%;
+    padding: 0px 5%;
     background-color: #fff;
     padding-top: 0px;
     position: fixed;
@@ -287,10 +289,11 @@ nav
 -----------------------------------*/
 
 section {
-    width: 70%;
-    margin: 0 15%;
+    width: 90%;
+    margin: 0 5%;
     position: relative;
-    display: inline-block;    
+    display: inline-block;
+   
 }
 
 .maskencontainer {
@@ -299,8 +302,8 @@ section {
 }
 
 .h1top {
-    width: 70%;
-    padding: 40px 15% 0;
+    width: 90%;
+    padding: 40px 5% 0;
     margin: 0;
     position: relative;
 }
@@ -309,8 +312,8 @@ section {
     font-family:"Arial Black", "Arial Bold", Helvetica, sans-serif;
     font-weight: bolder;
     font-size: 75px;
-    width: 70%;
-    padding: 26px 15%;
+    width: 90%;
+    padding: 26px 5%;
     margin: 0;
     margin-top: 45px;
     position: relative;
@@ -322,8 +325,8 @@ section {
 
 .bestellung {
     position: fixed;
-    width: 70%;
-    padding: 15px 15%;
+    width: 90%;
+    padding: 15px 5%;
     margin: 0;
     background-color: #fff;
     z-index: 99;
@@ -338,6 +341,18 @@ section {
 }
 
 .twoicon.r {
+    margin-right: 0;
+}
+
+.threeicon {
+    width: 30%;
+    float: left;
+    margin-right: 5%;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.threeicon.r {
     margin-right: 0;
 }
 
@@ -371,8 +386,8 @@ footer {
     position: relative;
     display: inline-block;
     background-color: #fff;
-    width: 70%;
-    padding: 0 15%;
+    width: 90%;
+    padding: 0 5%;
     float: left;
 }
 
@@ -436,24 +451,26 @@ responsive ipad
     h1 {font-size: 34px;}
     h2 {font-size: 26px;}
     p, p a, li {font-size: 18px;}
-    section {width: 90%; margin: 0 5%;}
-    #navcontainer, footer {width: 90%; padding: 0 5%;} 
     .maskencontainer {margin-bottom: 20px;}
 }
     
-@media only screen and (max-width: 860px) {
-    .h1red {font-size: 50px; width: 90%; padding: 26px 5%;}
+@media only screen and (max-width: 1200px) {
+    .h1red {font-size: 50px;}
     h1, .nav a {font-size: 25px;}
     h2 {font-size: 20px;}
     p, p a, li, li span, h3, h3 a {font-size: 16px; line-height: 1.4;}
     .twoicon {margin-right: 4%; width: 48%}
+    .twoicon.r {margin-right: 0%;}
+    .threeicon {margin-right: 4%; width: 48%}
+    .threeicon.rr {margin-right: 0px;}
+    .threeicon.r {margin-right: 4%;}
     .productb {padding: 20px 20px;}
     .fouricon {width: 50%;}
 }
 
 
-@media only screen and (max-width: 740px) {
-    .twoicon {margin-right: 0; width: 100%}
+@media only screen and (max-width: 900px) {
+    .twoicon, .threeicon {margin-right: 0; width: 100%}
     .maskencontainer {margin-bottom: 0px;}
 }
 
