--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,3 @@
-/*
-    Theme Name: altagsmasken
-    Description: altagsmasken
-    Version: 1.0
-    Tags: No Tags
-*/
-
-/*
-    Color Theme: altagsmasken
-    Main Color Green: #000000;
-    Boarder Green: #000000;
-*/
 
 html, body {
     height: 100%;
@@ -442,6 +430,65 @@ footer {
     padding: 20px;
 }
 
+
+/*----------------------------------
+    Cookiebanner
+-----------------------------------*/
+
+#cookiebanner {
+    position: fixed;
+    bottom: -300px;
+    left: 40px;
+    border-radius: 10px;
+    width: 350px;
+    background-color: white;
+    padding: 15px;
+    z-index: 9999;
+    transition: bottom 0.5s cubic-bezier(0.2, 0.8, 0.3, 2);
+  }
+  
+  #cookiebanner p {
+    color: black;
+    margin: 0;
+  }
+  
+  #cookiebanner.visible {
+    bottom: 25px;
+  }
+  
+  #cookiebanner button {
+    font-size: 20px;
+    letter-spacing: 0;
+    text-decoration: none; 
+  }
+  
+  #declineBtn, #acceptBtn {
+    border-radius: 30px;
+    margin-top: 20px;
+  }
+  
+  #declineBtn {
+    padding: 10px 20px;
+    background:none;
+    border: 1px solid gray; 
+    color: gray;
+    opacity: 0.5;
+  }
+  
+  #acceptBtn {
+    border: none;
+    padding: 10px 40px;
+    background: black;
+    color: white;
+    margin-right: 5px;
+  }
+  
+  #acceptBtn:hover,
+  #declineBtn:hover {
+    transition: opacity 0.5s ease-in-out;
+    opacity: 0.75; ;
+  }
+
 /*---------------------------------- 
 responsive ipad
 -----------------------------------*/
@@ -480,5 +527,8 @@ responsive ipad
     h1 {margin-top: 30px;}
     .productb {margin-bottom: 0px;}
     .fouricon {width: 100%;}
+
+    #cookiebanner {width: calc(100% - 70px); left: 20px;}
+    #cookiebanner.visible {bottom: 60px;}
     
 }
